WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171713
Web Automation: cookie-related commands don't work correctly
https://bugs.webkit.org/show_bug.cgi?id=171713
Summary
Web Automation: cookie-related commands don't work correctly
Blaze Burg
Reported
2017-05-04 21:32:51 PDT
.
Attachments
Patch
(3.10 KB, patch)
2017-05-04 21:38 PDT
,
Blaze Burg
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2017-05-04 21:33:04 PDT
<
rdar://problem/29829930
>
Blaze Burg
Comment 2
2017-05-04 21:38:04 PDT
Created
attachment 309142
[details]
Patch
Alexey Proskuryakov
Comment 3
2017-05-04 22:31:34 PDT
Comment on
attachment 309142
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=309142&action=review
> Source/WebKit2/UIProcess/Automation/WebAutomationSession.cpp:826 > + if (error != CallbackBase::Error::None) > + callback->sendFailure(STRING_FOR_PREDEFINED_ERROR_NAME(InternalError)); > + else > + callback->sendSuccess();
It seems slightly better to start with success case - avoiding negation makes code a bit easier to understand.
Blaze Burg
Comment 4
2017-05-05 12:31:27 PDT
Committed
r216261
: <
http://trac.webkit.org/changeset/216261
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug